add new logic and styles for sign up page

--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,12 +1,1 @@
-@font-face {
-  font-family: 'pier-sans-italic';
-  src: url('../fonts/pier-italic-webfont.woff2') format('woff2'),
-  url('../fonts/pier-italic-webfont.woff') format('woff');
-
-}
-
-@font-face {
-  font-family: 'pier-sans-regular';
-  src: url('../fonts/pier-regular-webfont.woff2') format('woff2'),
-  url('../fonts/pier-regular-webfont.woff') format('woff');
-}
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700|Montserrat:400,700');
