--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -1,14 +1,15 @@
 //Colors
-$font-color: #1bcec7;
-$pattern-color: #000;
-$bg-color: #1b65a3;
-$heading-color: #63cc30;
+$color-primary: #05d5ff;
+$color-secondary: #71f1a6;
+
+$black: #000;
 $white: #ffffff;
 
 //Fonts
 $base-font-color: $white;
-$font-family-base: "pier-sans-regular", Helvetica, Arial, sans-serif;
-$font-size-h1: 60px;
+$font-family-base: 'Montserrat', sans-serif;
+$font-family-secondary: 'Lato', sans-serif;
+$font-size-h1: 70px;
 $font-size-h2: 30px;
 $font-size-text-section: 24px;
 $base-font-size: 18px;
