update styles and functions

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -4,6 +4,7 @@ $color-secondary: #71f1a6;
 
 $black: #000;
 $white: #ffffff;
+$red: #ff5f5f;
 
 //Fonts
 $base-font-color: $white;
@@ -13,6 +14,7 @@ $font-size-h1: 70px;
 $font-size-h2: 30px;
 $font-size-text-section: 24px;
 $base-font-size: 18px;
+$small-font: 12px;
 
 $font-weight-bold: bold;
 $letter-spacing-h1: 30px;
