--- a/src/components/RegisterPage/style.scss
+++ b/src/components/RegisterPage/style.scss
@@ -28,17 +28,40 @@
     width: 100%;
     max-width: 400px;
     border: 4px solid $color-primary;
+    position: relative;
+
+    p {
+      display: block;
+      font-size: $small-font;
+      text-align: right;
+    }
 
     h2 {
       font-size: $font-size-h2;
     }
 
+    .message {
+      position: absolute;
+      background-color: $red;
+      width: 100%;
+      padding: 6px;
+      color: $white;
+      left: 0;
+      bottom: -35px;
+      font-size: $small-font;
+      transition: .6s ease;
+
+      &.-hidden {
+        opacity: 0;
+        bottom: -30px;
+      }
+    }
+
     .butn {
       display: block;
       text-align: center;
-      margin-top: 30px;
+      margin-top: 20px;
       width: 50%;
-      float: right;
     }
   }
 }
