--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -1,16 +1,18 @@
 //Colors
-$color-primary: #05d5ff;
-$color-secondary: #71f1a6;
+$color-primary: #44cfea;
+$color-secondary: #00ccbc;
 
-$black: #000;
+$black: #333;
 $white: #ffffff;
 $red: #ff5f5f;
+
+$facebook: #3b5998;
 
 //Fonts
 $base-font-color: $white;
 $font-family-base: 'Montserrat', sans-serif;
 $font-family-secondary: 'Lato', sans-serif;
-$font-size-h1: 70px;
+$font-size-h1: 75px;
 $font-size-h2: 30px;
 $font-size-text-section: 24px;
 $base-font-size: 18px;
