--- a/src/components/LoginPage/style.scss
+++ b/src/components/LoginPage/style.scss
@@ -1,6 +1,6 @@
 @import "../../styles/settings";
 
-.l-register-page {
+.l-login-page {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,12 +8,11 @@
 
   .diagonal {
     width: 100%;
-    height: 300px;
+    height: 350px;
     overflow: hidden;
-    transform: skewY(-8deg);
+    transform: skewY(-16deg);
     -webkit-transform-origin: 0;
     transform-origin: 0;
-    // background: -webkit-linear-gradient(300deg, #53f 15%, #05d5ff 70%, #a6ffcb 94%);
     background: $color-primary;
     position: absolute;
     z-index: 2;
@@ -31,13 +30,13 @@
 
     .contain-submit {
       display: flex;
-      justify-content: space-between;
+      justify-content: flex-end;
 
       .butn {
         display: block;
         text-align: center;
         margin-top: 20px;
-        width: 45%;
+        width: 50%;
       }
     }
 
