--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,6 +1,22 @@
+body {
+  color: $black;
+}
+
 .wrap {
   width: 100%;
   max-width: 1080px;
   padding: 0 20px;
   margin: 0 auto;
+}
+
+a {
+  display: inline-block;
+
+  &::after {
+    display: block;
+    content: '';
+    width: 100%;
+    height: 2px;
+    background-color: $color-secondary;
+  }
 }
