--- a/src/components/HomePage/style.scss
+++ b/src/components/HomePage/style.scss
@@ -10,6 +10,7 @@
       background-color: $color-primary;
       display: flex;
       align-items: center;
+      padding: 0 50px;
 
 
       div {
