--- a/src/components/LoginPage/style.scss
+++ b/src/components/LoginPage/style.scss
@@ -27,16 +27,17 @@
     max-width: 450px;
     border: 4px solid $color-primary;
     position: relative;
+    border-radius: $border-radius;
 
     .contain-submit {
       display: flex;
-      justify-content: flex-end;
+      justify-content: space-between;
 
       .butn {
         display: block;
         text-align: center;
         margin-top: 20px;
-        width: 50%;
+        width: 45%;
       }
     }
 
