--- a/src/components/RegisterPage/style.scss
+++ b/src/components/RegisterPage/style.scss
@@ -13,7 +13,6 @@
     transform: skewY(-8deg);
     -webkit-transform-origin: 0;
     transform-origin: 0;
-    // background: -webkit-linear-gradient(300deg, #53f 15%, #05d5ff 70%, #a6ffcb 94%);
     background: $color-primary;
     position: absolute;
     z-index: 2;
@@ -28,6 +27,7 @@
     max-width: 450px;
     border: 4px solid $color-primary;
     position: relative;
+    border-radius: $border-radius;
 
     .contain-submit {
       display: flex;
