--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -24,3 +24,19 @@ a {
 button {
   border: 0;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: $font-family-base;
+}
+
+p,
+a,
+button,
+input {
+  font-family: $font-family-secondary;
+}
