--- a/src/components/LoginPage/style.scss
+++ b/src/components/LoginPage/style.scss
@@ -8,15 +8,15 @@
 
   .diagonal {
     width: 100%;
-    height: 350px;
+    height: 250px;
     overflow: hidden;
-    transform: skewY(-16deg);
+    transform: skewY(-4deg);
     -webkit-transform-origin: 0;
     transform-origin: 0;
     background: $color-primary;
     position: absolute;
     z-index: 2;
-    top: calc((100vh / 2) - 350);
+    top: 0;
   }
 
   form {
