--- a/src/components/Menu/style.scss
+++ b/src/components/Menu/style.scss
@@ -7,7 +7,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 15px 50px;
+  padding: 15px 100px;
+  transition: $animation-cubic;
 
   img {
     width: 50px;
@@ -25,5 +26,10 @@
         color: $black;
       }
     }
+  }
+
+  &.-white {
+    background-color: $white;
+    box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.1);
   }
 }
