--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -8,6 +8,8 @@ $red: #ff5f5f;
 
 $facebook: #3b5998;
 
+$body: #fdfdfd;
+
 //Fonts
 $base-font-color: $white;
 $font-family-base: 'Montserrat', sans-serif;
@@ -32,3 +34,7 @@ $large-margin: 80px;
 
 
 $border-radius: 3px;
+
+// Animation
+$animation-cubic: .2s cubic-bezier(.31, .57, .72, .43);
+$cubic: cubic-bezier(.31, .57, .72, .43);
