--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,4 @@
-@import "fonts", "settings", "base";
-@import "utils/normalize";
-@import "utils/input";
-@import "utils/button";
+@import 'fonts', 'settings', 'base';
+@import 'utils/normalize';
+@import 'utils/input';
+@import 'utils/button';
