--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -3,7 +3,7 @@ $color-primary: #44cfea;
 $color-secondary: #00ccbc;
 
 $black: #333;
-$white: #ffffff;
+$white: #fff;
 $red: #ff5f5f;
 
 $facebook: #3b5998;
