--- a/src/components/Menu/style.scss
+++ b/src/components/Menu/style.scss
@@ -1,14 +1,14 @@
-@import "../../styles/settings";
+@import '../../styles/settings';
 
 .c-menu {
-  position: fixed;
-  width: 100%;
-  z-index: 5;
   display: flex;
+  position: fixed;
   align-items: center;
   justify-content: space-between;
+  width: 100%;
   padding: 15px 100px;
   transition: $animation-cubic;
+  z-index: 5;
 
   img {
     width: 50px;
@@ -16,12 +16,14 @@
 
   .contain-buttons {
     padding: 5px 20px 5px 5px;
-    background-color: $white;
     border-radius: $border-radius;
+    background-color: $white;
+
     .butn {
       &.-submit {
         margin-right: 20px;
       }
+
       &.-link {
         color: $black;
       }
@@ -30,6 +32,6 @@
 
   &.-white {
     background-color: $white;
-    box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.1);
+    box-shadow: 0 1px 0 0 rgba($black, .1);
   }
 }
