--- a/src/components/Profile/style.scss
+++ b/src/components/Profile/style.scss
@@ -1,29 +1,33 @@
-@import "../../styles/settings";
+@import '../../styles/settings';
 
 .l-profile-page {
-  top: 250px;
   position: relative;
+  top: 250px;
 
-  h2 {
-    font-size: $font-size-h2;
-    margin-bottom: 20px;
+  h1 {
+    margin-bottom: 40px;
   }
 
   button {
-    margin-right: 20px;
-    font-family: $font-family-secondary;
-    background-color: transparent;
     position: relative;
+    margin-right: 40px;
+    padding: 0;
     outline: 0;
+    background-color: transparent;
+    font-family: $font-family-secondary;
+    font-size: $base-font-size;
+    opacity: .5;
 
     &.-selected {
+      opacity: 1;
+
       &::after {
-        content: '';
         display: block;
-        height: 3px;
-        background-color: $color-primary;
         width: 100%;
+        height: 4px;
         margin-top: 3px;
+        background-color: $color-primary;
+        content: '';
       }
     }
 
@@ -34,14 +38,13 @@
 }
 
 .diagonal {
+  position: absolute;
+  top: 0;
   width: 100%;
   height: 200px;
-  overflow: hidden;
   transform: skewY(-4deg);
-  -webkit-transform-origin: 0;
   transform-origin: 0;
   background: $color-primary;
-  position: absolute;
+  overflow: hidden;
   z-index: 2;
-  top: 0;
 }
